Use Java 8 compatible file IO in CleanTargetIntegrationTest